welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:6: error: ')' expected but ';' found.
		(nbBiscuitPasse = nbBiscuitPasse + 1 ;)
                                                     ^RunFour:6: error: illegal start of statement
		(nbBiscuitPasse = nbBiscuitPasse + 1 ;)
                                                      ^